# web-vla-agent

./: .gitignore  README.md  requirements.txt
web_vla_agent/: .gitignore  README.md  main.py  pyproject.toml
web_vla_agent/checkpoints/stage2_epoch1/: adapter_config.json
web_vla_agent/configs/: default.yaml
web_vla_agent/data/: __init__.py  augmentation.py  mind2web_loader.py  precompute_embeddings.py  preprocessing.py
web_vla_agent/environment/: __init__.py  dom_serializer.py  playwright_env.py
web_vla_agent/evaluation/: __init__.py  evaluate.py  metrics.py
web_vla_agent/inference/: __init__.py  run_agent.py  run_tasks.py
web_vla_agent/memory/: __init__.py  failure_detector.py  long_term.py  short_term.py
web_vla_agent/models/: __init__.py  action_decoder.py  candidate_ranker.py  encoders.py  graph_dom_encoder.py  groq_model.py  grounder.py  planner.py  prompt_builder.py  qwen2vl_llm.py  task_planner.py  uncertainty.py  vla_model.py
web_vla_agent/report/: architecture_report.tex
web_vla_agent/scripts/: diagnose_data.py
web_vla_agent/tests/: test_lora_targets.py  test_smoke.py
web_vla_agent/training/: train_supervised.py
web_vla_agent/utils/: __init__.py  config.py  logging.py
